--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
       uses: actions/checkout@v4
       
     - name: Run tests with Docker Compose
-      run: docker compose -f compose.test.yml up --abort-on-container-exit --exit-code-from backend
+      run: docker compose -f compose.test.yml up --abort-on-container-exit --exit-code-from backendtest
       
     - name: Clean up
       if: always()
