--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -14,24 +14,24 @@ jobs:
 
     steps:
 
-    # first login
-    - name: Docker Login
-    - uses: docker/login-action@v3.6.0
-      with:
-        # Username used to log against the Docker registry
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        # Password or personal access token used to log against the Docker registry
-        password: ${{ secrets.DOCKERHUB_ACCESS_TOKEN }}
+      # first login
+      - name: Docker Login
+        uses: docker/login-action@v3.6.0
+        with:
+          # Username used to log against the Docker registry
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          # Password or personal access token used to log against the Docker registry
+          password: ${{ secrets.DOCKERHUB_ACCESS_TOKEN }}
 
-    # then build and push
-    - name: Build and push Docker images
-    - uses: docker/build-push-action@v6.18.0
-      with:
-        context: .
-        file: ./Dockerfile
-        # List of tags
-        tags: |
-          ${{ secrets.DOCKERHUB_USERNAME }}/hello_ci_cd:latest
-          ${{ secrets.DOCKERHUB_USERNAME }}/hello_ci_cd:$(date +'%Y%m%d%H%M%S')
-        # Sets the target stage to build
-        target: final
+      # then build and push
+      - name: Build and push Docker images
+        uses: docker/build-push-action@v6.18.0
+        with:
+          context: .
+          file: ./Dockerfile
+          # List of tags
+          tags: |
+            ${{ secrets.DOCKERHUB_USERNAME }}/hello_ci_cd:latest
+            ${{ secrets.DOCKERHUB_USERNAME }}/hello_ci_cd:$(date +'%Y%m%d%H%M%S')
+          # Sets the target stage to build
+          target: final
