--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,6 +4,8 @@ on:
   # only run while pull requested on master branch
   pull_request:
     branches: [ master ]
+  push:
+    branches: [ master ]
 
 jobs:
   test:
