--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,4 +1,4 @@
-name: Docker Image CI
+name: Docker Image CD to EC2
 
 # run on merge or push to master
 on:
@@ -8,7 +8,7 @@ on:
 # will have 2 jobs: one to build and push image to dockerhub, other to pull on ec2 and run it as a container
 jobs:
 
-  build_and_test:
+  build_and_deploy:
 
     runs-on: ubuntu-latest
 
@@ -47,7 +47,7 @@ jobs:
           target: final
   deploy_on_ec2:
     runs-on: ubuntu-latest
-    needs: build_and_test
+    needs: build_and_deploy
     steps:
 
       # first setup ssh to use the private key
