--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -5,12 +5,31 @@ on:
   push:
     branches: [ "master" ]
 
-# will have 2 jobs: one to build and push image to dockerhub, other to pull on ec2 and run it as a container
+# will have 3 jobs: one to test, one to build and push image to dockerhub, other to pull on ec2 and run it as a container
+# won't build and push if test fails
+# won't deploy if not built and pushed
 jobs:
+
+  test:
+    runs-on: ubuntu-latest
+    
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+        
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '22.15.0'
+      - name: Install dependencies
+        run: npm install
+      - name: Run tests
+        run: npm test
 
   build_and_push:
 
     runs-on: ubuntu-latest
+    needs: test
 
     steps:
 
