--- a/.github/workflows/ci_without_containerization.yml
+++ b/.github/workflows/ci_without_containerization.yml
@@ -3,10 +3,8 @@
 
 name: CI - Test Application without Containerization
 on:
-  # only run while pushed or pull requested on master branch
+  # only run while pull requested on master branch
   pull_request:
-    branches: [ master ]
-  push:
     branches: [ master ]
 jobs:
   # see jobs are independent of each other,
